required: initial commit
update simplespeclang for mountpoint/plugins

--- a/doc/METADATA.ini
+++ b/doc/METADATA.ini
@@ -304,7 +304,7 @@ example = 4-20
 
 [required]
 type = range
-status= proposal
+status= implemented
 description = for _ as basename as array. Otherwise the presence determines
   if a key is required.
 
