--- a/src/tools/rest-frontend/bower.json
+++ b/src/tools/rest-frontend/bower.json
@@ -1,5 +1,5 @@
 {
-  "name": "kdb-rest-angular",
+  "name": "rest-frontend",
   "description": "rest frontend application",
   "main": "Gruntfile.js",
   "authors": [
@@ -11,7 +11,7 @@
     "kdb",
     "frontend",
     "rest",
-    "repository"
+    "snippet sharing"
   ],
   "homepage": "http://libelektra.org",
   "private": true,
@@ -25,7 +25,6 @@
   "dependencies": {
     "angular-marked": "^1.2.2",
     "jquery": "2.2.4",
-    "jquery-ui": "jquery.ui#~1.11.4",
     "underscore": "~1.8.3",
     "angular-file-saver": "1.1.2",
     "angular-ui-router": "~0.3.1",
@@ -33,13 +32,10 @@
     "angular-translate-loader-static-files": "2.12.1",
     "angular-logger-max": "^1.2.3",
     "angular-breadcrumb": "^0.4.1",
-    "restangular": "^1.5.2",
     "ng-tags-input": "^3.1.1",
     "satellizer": "^0.15.5",
-    "angular-datatables": "^0.5.5",
     "angular-ui-notification": "^0.2.0",
     "bootstrap": "~3.3.7",
-    "datatables.net-bs": "^1.10.12",
     "angular-utf8-base64": "^0.0.5",
     "PACE": "pace#^1.0.2",
     "angular-bootstrap": "^2.1.4",
