--- a/src/tools/rest-frontend/package.json
+++ b/src/tools/rest-frontend/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "kdb-rest-angular",
+  "name": "rest-frontend",
   "version": "1.0.0",
   "description": "rest frontend application",
   "main": "Gruntfile.js",
@@ -8,21 +8,19 @@
     "kdb",
     "frontend",
     "rest",
-    "repository"
+    "snippet sharing"
   ],
   "author": "Namoshek",
   "license": "BSD",
   "devDependencies": {
-    "grunt": "~0.4.4",
+    "grunt": "latest",
     "grunt-cli": "latest",
-    "grunt-contrib-concat": "^0.5.1",
     "grunt-contrib-cssmin": "latest",
     "grunt-contrib-jshint": "latest",
     "grunt-contrib-less": "latest",
     "grunt-contrib-uglify": "latest",
     "grunt-contrib-watch": "latest",
-    "grunt-serve": "^0.1.6",
-    "jshint-stylish": "latest",
+    "grunt-http-server": "latest",
 	"bower": "latest"
   },
   "scripts": {
