rest-frontend: add find-npm check to cmake

--- a/src/tools/rest-frontend/CMakeLists.txt
+++ b/src/tools/rest-frontend/CMakeLists.txt
@@ -1,6 +1,9 @@
-set (install_directory ${TARGET_TOOL_EXEC_FOLDER}/${tool})
+find_program (NPM_EXECUTABLE "npm")
 
-install (DIRECTORY public resources DESTINATION ${install_directory})
-install (FILES bower.json Gruntfile.js package.json .bowerrc DESTINATION ${install_directory})
-message (STATUS "Install directory: " ${install_directory})
-install (CODE "execute_process (COMMAND npm install --unsafe-perm WORKING_DIRECTORY ${CMAKE_INSTALL_PREFIX}/${install_directory})")
+if (NPM_EXECUTABLE)
+    set (install_directory ${TARGET_TOOL_EXEC_FOLDER}/${tool})
+
+    install (DIRECTORY public resources DESTINATION ${install_directory})
+    install (FILES bower.json Gruntfile.js package.json .bowerrc DESTINATION ${install_directory})
+    install (CODE "execute_process (COMMAND npm install --unsafe-perm WORKING_DIRECTORY ${CMAKE_INSTALL_PREFIX}/${install_directory})")
+endif (NPM_EXECUTABLE)
