rest-backend: cmake update to use tool name instead of fixed name

--- a/src/tools/rest-backend/CMakeLists.txt
+++ b/src/tools/rest-backend/CMakeLists.txt
@@ -2,13 +2,13 @@ find_package (CppCMS)
 find_package (Boost 1.45 COMPONENTS system filesystem thread)
 
 if (NOT CPPCMS_FOUND)
-	remove_tool (rest-backend "CppCMS package not found")
+	remove_tool (${tool} "CppCMS package not found")
 elseif (NOT Boost_FOUND)
-	remove_tool (rest-backend "Boost package not found")
+	remove_tool (${tool} "Boost package not found")
 else ()
 
-    set (REST_AUTH_ENCRYPT_KEY "please_change" CACHE STRING "Encryption key to be used for auth tokens")
-    set (REST_JWT_ISSUER "secret_issuer" CACHE STRING "The issuer to be used for JWT tokens, should be kept secret")
+    set (REST_AUTH_ENCRYPT_KEY "please_change_to_secret_key" CACHE STRING "Encryption key to be used for auth tokens")
+    set (REST_JWT_ISSUER "additional_secret_issuer" CACHE STRING "The issuer to be used for JWT tokens, should be kept secret")
     set (REST_REPOSITORY_CONFIGS "dir/configs" CACHE STRING "Path to be used to store configuration snippets")
     set (REST_REPOSITORY_USERS "dir/users" CACHE STRING "Path to be used to store user information")
 
@@ -42,18 +42,18 @@ else ()
 
     file (GLOB rest-backend_SRCS *.cpp)
 
-    add_library (tmp_rest-backend OBJECT ${rest-backend_SRCS})
-    add_executable (rest-backend $<TARGET_OBJECTS:tmp_rest-backend>)
-    target_link_libraries (rest-backend ${CPPCMS_LIBRARY} ${Boost_LIBRARIES})
-    target_link_libraries (rest-backend elektra-full elektratools)
+    add_library (tmp_${tool} OBJECT ${rest-backend_SRCS})
+    add_executable (${tool} $<TARGET_OBJECTS:tmp_${tool}>)
+    target_link_libraries (${tool} ${CPPCMS_LIBRARY} ${Boost_LIBRARIES})
+    target_link_libraries (${tool} elektra-full elektratools)
 
-    install (TARGETS rest-backend DESTINATION ${TARGET_TOOL_EXEC_FOLDER})
+    install (TARGETS ${tool} DESTINATION ${TARGET_TOOL_EXEC_FOLDER})
     install (TARGETS plain LIBRARY DESTINATION lib/elektra)
     install (FILES rest-backend-config.js DESTINATION ${TARGET_TOOL_EXEC_FOLDER})
-    install (FILES run.sh DESTINATION ${TARGET_TOOL_EXEC_FOLDER} RENAME run-rest-backend.sh)
-    install (FILES stop.sh DESTINATION ${TARGET_TOOL_EXEC_FOLDER} RENAME stop-rest-backend.sh)
+    install (FILES run.sh DESTINATION ${TARGET_TOOL_EXEC_FOLDER} RENAME run-${tool}.sh)
+    install (FILES stop.sh DESTINATION ${TARGET_TOOL_EXEC_FOLDER} RENAME stop-${tool}.sh)
 
-    generate_manpage (kdb-rest-backend FILENAME ${CMAKE_CURRENT_SOURCE_DIR}/README.md)
+    generate_manpage (kdb-${tool} FILENAME ${CMAKE_CURRENT_SOURCE_DIR}/README.md)
     
     if (ENABLE_TESTING)
 	    add_subdirectory (tests)
