--- a/src/tools/rest-backend/tests/CMakeLists.txt
+++ b/src/tools/rest-backend/tests/CMakeLists.txt
@@ -13,7 +13,7 @@ file (GLOB rest-backend_SRCS ../*.cpp)
 file (GLOB TESTS test_*.cpp)
 foreach (file ${TESTS})
     get_filename_component (name ${file} NAME_WE)
-    add_gtest (${name} LINK_TOOLS NO_MAIN SOURCES $<TARGET_OBJECTS:tmp_rest-backend>)
+    add_gtest (${name} LINK_TOOLS NO_MAIN SOURCES $<TARGET_OBJECTS:tmp_${tool}>)
     target_link_elektra (${name} ${Boost_LIBRARIES})
     target_link_elektra (${name} ${CPPCMS_LIBRARY})
 endforeach (file ${TESTS})
