--- a/src/tools/rest-frontend/package.json
+++ b/src/tools/rest-frontend/package.json
@@ -13,6 +13,7 @@
   "author": "Namoshek",
   "license": "BSD",
   "devDependencies": {
+    "bower": "latest",
     "grunt": "latest",
     "grunt-cli": "latest",
     "grunt-contrib-cssmin": "latest",
@@ -21,11 +22,11 @@
     "grunt-contrib-uglify": "latest",
     "grunt-contrib-watch": "latest",
     "grunt-http-server": "latest",
-	"jshint-stylish": "latest",
-	"bower": "latest"
+    "grunt-preprocess": "latest",
+    "jshint-stylish": "latest"
   },
   "scripts": {
-	  "postinstall": "./node_modules/bower/bin/bower --allow-root install && ./node_modules/grunt-cli/bin/grunt full"
+    "postinstall": "./node_modules/bower/bin/bower --allow-root install && ./node_modules/grunt-cli/bin/grunt full"
   },
   "config": {
     "unsafe-perm": true
