doc: array proposal
see #182

--- a/doc/METADATA.ini
+++ b/doc/METADATA.ini
@@ -131,7 +131,7 @@ description=reserved meta information that will be preserved during the whole
 
 
 #
-# For tagging binary keys
+# For tagging binary/array keys
 #
 
 [binary]
@@ -142,6 +142,14 @@ usedby/plugin= xmltool yajl null
 description= For this metadata only the presence is significant, not its value.
   It is used to tag binary keys. Binary keys are keys that either have no value (null keys, keyValue returns null).
 
+
+[array]
+type = array-index
+status = proposed
+description = Such keys have only keys conforming to Elektra's arrays convention as subkeys.
+  If the meta-value is empty, the array is empty (no subkeys).
+  Otherwise the meta-value contains the last element.
+example = #5
 
 
 
@@ -295,7 +303,7 @@ description = reports which meta data had a conflict because another
   meta data was already present before.
   Idea: use only one log, also for conflicts.
 
-[array]
+[array/range]
 type = range
 status = proposed
 description = checks if the subkeys form a valid array and are not smaller/larger
