intercept: move to bindings
fix #849

--- a/src/bindings/intercept/CMakeLists.txt
+++ b/src/bindings/intercept/CMakeLists.txt
@@ -1,5 +1,9 @@
-include (LibAddMacros)
-add_headers(HDR_FILES)
-add_library(elektraintercept SHARED "intercept.c")
-target_link_libraries (elektraintercept elektra-kdb elektra-meta)
-install (TARGETS elektraintercept DESTINATION lib${LIB_SUFFIX})
+list (FIND BINDINGS "intercept_open" FINDEX)
+if (FINDEX GREATER -1)
+	add_subdirectory (open)
+endif ()
+
+list (FIND BINDINGS "intercept_getenv" FINDEX)
+if (FINDEX GREATER -1)
+	add_subdirectory (getenv)
+endif ()
