--- a/src/bindings/intercept/open/CMakeLists.txt
+++ b/src/bindings/intercept/open/CMakeLists.txt
@@ -1,5 +1,14 @@
-include (LibAddMacros)
-add_headers(HDR_FILES)
-add_library(elektraintercept SHARED "intercept.c")
-target_link_libraries (elektraintercept elektra-kdb elektra-meta)
-install (TARGETS elektraintercept DESTINATION lib${LIB_SUFFIX})
+include (CheckSymbolExists)
+check_symbol_exists (__GNU_LIBRARY__ "features.h"    HAVE_GLIBC)
+
+if (NOT BUILD_SHARED)
+	remove_binding (intercept_open "intercept_open only works with BUILD_SHARED")
+elseif (NOT HAVE_GLIBC)
+	remove_binding (intercept_open "intercept_open currently needs glibc")
+else ()
+	include (LibAddMacros)
+	add_headers (HDR_FILES)
+	add_library (elektraintercept SHARED "intercept.c")
+	target_link_libraries (elektraintercept elektra-kdb elektra-meta)
+	install (TARGETS elektraintercept DESTINATION lib${LIB_SUFFIX})
+endif ()
