--- a/src/bindings/intercept/getenv/src/CMakeLists.txt
+++ b/src/bindings/intercept/getenv/src/CMakeLists.txt
@@ -7,18 +7,22 @@ file (GLOB_RECURSE SRC_FILES *.cpp)
 
 set (SOURCES ${SRC_FILES} ${HDR_FILES})
 
-add_library (elektragetenv SHARED ${SOURCES})
-add_dependencies (elektragetenv kdberrors_generated)
+add_library (elektraintercept-env SHARED ${SOURCES})
+add_dependencies (elektraintercept-env kdberrors_generated)
 
-target_link_libraries (elektragetenv ${CMAKE_DL_LIBS})
-target_link_libraries (elektragetenv elektra-kdb elektra-meta) # must be shared!
+target_link_libraries (elektraintercept-env ${CMAKE_DL_LIBS})
+target_link_libraries (elektraintercept-env elektra-kdb elektra-meta) # must be shared!
 
-set_target_properties (elektragetenv PROPERTIES
+set_target_properties (elektraintercept-env PROPERTIES
 	COMPILE_DEFINITIONS "HAVE_KDBCONFIG_H"
 	VERSION ${KDB_VERSION} SOVERSION ${SO_VERSION_GETENV}
 	CLEAN_DIRECT_OUTPUT 1
 	LINKER_LANGUAGE CXX
 )
 
+install (TARGETS elektraintercept-env DESTINATION lib${LIB_SUFFIX})
 
-install (TARGETS elektragetenv DESTINATION lib${LIB_SUFFIX})
+create_lib_symlink (
+		libelektraintercept-env.so
+		libelektragetenv.so
+		)
