intercept: open -> fs, getenv -> env

--- a/src/bindings/intercept/CMakeLists.txt
+++ b/src/bindings/intercept/CMakeLists.txt
@@ -1,11 +1,11 @@
-list (FIND BINDINGS "intercept_open" FINDEX)
+list (FIND BINDINGS "intercept_fs" FINDEX)
 if (FINDEX GREATER -1)
-	message (STATUS "Include Binding intercept_open")
-	add_subdirectory (open)
+	message (STATUS "Include Binding intercept_fs")
+	add_subdirectory (fs)
 endif ()
 
-list (FIND BINDINGS "intercept_getenv" FINDEX)
+list (FIND BINDINGS "intercept_env" FINDEX)
 if (FINDEX GREATER -1)
-	message (STATUS "Include Binding intercept_getenv")
-	add_subdirectory (getenv)
+	message (STATUS "Include Binding intercept_env")
+	add_subdirectory (env)
 endif ()
