--- a/src/bindings/intercept/fs/CMakeLists.txt
+++ b/src/bindings/intercept/fs/CMakeLists.txt
@@ -2,9 +2,9 @@ include (CheckSymbolExists)
 check_symbol_exists (__GNU_LIBRARY__ "features.h"    HAVE_GLIBC)
 
 if (NOT BUILD_SHARED)
-	remove_binding (intercept_open "intercept_open only works with BUILD_SHARED")
+	remove_binding (intercept_fs "intercept_fs only works with BUILD_SHARED")
 elseif (NOT HAVE_GLIBC)
-	remove_binding (intercept_open "intercept_open currently needs glibc")
+	remove_binding (intercept_fs "intercept_fs currently needs glibc")
 else ()
 	include (LibAddMacros)
 	add_headers (HDR_FILES)
