--- a/src/bindings/intercept/env/CMakeLists.txt
+++ b/src/bindings/intercept/env/CMakeLists.txt
@@ -2,9 +2,9 @@ include (CheckSymbolExists)
 check_symbol_exists (__GNU_LIBRARY__ "features.h"    HAVE_GLIBC)
 
 if (NOT BUILD_SHARED)
-	remove_binding (intercept_getenv "intercept_getenv only works with BUILD_SHARED")
+	remove_binding (intercept_env "intercept_env only works with BUILD_SHARED")
 elseif (NOT HAVE_GLIBC)
-	remove_binding (intercept_getenv "intercept_getenv currently needs glibc")
+	remove_binding (intercept_env "intercept_env currently needs glibc")
 else ()
 	add_subdirectory (include)
 	include_directories (include)
