*: meta-key -> metakey

--- a/doc/METADATA.ini
+++ b/doc/METADATA.ini
@@ -7,15 +7,15 @@
 #
 # meta-meta (description how to parse/use that file)
 #
-# [the name of the meta-key]
+# [the name of the metakey]
 # type= (string|enumeration|regular expression) the type of the meta-value
 # status= (implemented|idea) the current state of this meta data entry
-# usedby/api= the API methods which use the meta-key (space separated)
-# usedby/plugin= the plugins which use the meta-key (space separated)
-# usedby/tool= the tools which use the meta-key (space separated)
+# usedby/api= the API methods which use the metakey (space separated)
+# usedby/plugin= the plugins which use the metakey (space separated)
+# usedby/tool= the tools which use the metakey (space separated)
 # description= explains what it is about
-# note= give additional notes for that meta-key
-# example= give additional examples how the meta-key might look like
+# note= give additional notes for that metakey
+# example= give additional examples how the metakey might look like
 #
 # To mount this file you can use:
 #
