--- a/doc/CONTRACT.ini
+++ b/doc/CONTRACT.ini
@@ -245,7 +245,7 @@ type = null
 status = proposed
 usedby = spec
 example = check/validation check/validation/message
-description = a space separated list of meta-names a plugin will take care of.
+description = a space separated list of metanames a plugin will take care of.
   (implements the semantics for)
 
   Which metadata exists is defined in doc/METADATA.ini
