--- a/doc/METADATA.ini
+++ b/doc/METADATA.ini
@@ -5,10 +5,10 @@
 #
 
 #
-# meta-meta (description how to parse/use that file)
+# metameta (description how to parse/use that file)
 #
 # [the name of the metakey]
-# type= (string|enumeration|regular expression) the type of the meta-value
+# type= (string|enumeration|regular expression) the type of the metavalue
 # status= (implemented|idea) the current state of this metadata entry
 # usedby/api= the API methods which use the metakey (space separated)
 # usedby/plugin= the plugins which use the metakey (space separated)
@@ -35,7 +35,7 @@ version/minor=5
 
 
 #
-# Important meta-data often used in configuration files
+# Important metadata often used in configuration files
 # (and seldom in specifications)
 #
 
@@ -147,8 +147,8 @@ description= For this metadata only the presence is significant, not its value.
 type = array-index
 status = proposed
 description = Such keys have only keys conforming to Elektra's arrays convention as subkeys.
-  If the meta-value is empty, the array is empty (no subkeys).
-  Otherwise the meta-value contains the last element.
+  If the metavalue is empty, the array is empty (no subkeys).
+  Otherwise the metavalue contains the last element.
 example = #5
 
 
