--- a/doc/CONTRACT.ini
+++ b/doc/CONTRACT.ini
@@ -294,10 +294,13 @@ type = vector<int enum>
   {"configurable",    50}, ; options available to modify behaviour
   {"final",           50}, ; no further extensions, configure options or features are desirable
   {"global",           1}, ; suitable as global plugin
+  {"readonly",         0}, ; can only read data from files (only kdbGet implemented)
+  {"writeonly",        0}, ; can only write data to files (only kdbSet implemented)
   {"preview",        -50}, ; plugin in technical preview state
   {"memleak",       -250}, ; memleak in plugin or one of the libraries the plugin uses
   {"experimental",  -500}, ; not much tested, plugin is in early stage
   {"difficult",     -500}, ; the plugin is (unnecessarily) difficult to use
+  {"limited",       -750}, ; cannot represent arbitrary data (i.e. very specific format)
   {"unfinished",   -1000}, ; important functionality still missing
   {"old",          -1000}, ; code base is old and should be refactored/improved
   {"nodoc",        -1000}, ; documentation is minimal
