--- a/src/bindings/intercept/env/tests/CMakeLists.txt
+++ b/src/bindings/intercept/env/tests/CMakeLists.txt
@@ -7,5 +7,5 @@ include (LibAddTest)
 file (GLOB TESTS test_*.cpp)
 foreach (file ${TESTS})
 	get_filename_component (name ${file} NAME_WE)
-	add_gtest (${name} LINK_LIBRARIES elektragetenv)
+	add_gtest (${name} LINK_LIBRARIES elektraintercept-env)
 endforeach (file ${TESTS})
