--- a/scripts/elektrify-open.in
+++ b/scripts/elektrify-open.in
@@ -1,6 +1,6 @@
 #!/bin/sh
 
-interceptOpen="@CMAKE_INSTALL_PREFIX@/lib@LIB_SUFFIX@/libelektraintercept.so"
+interceptOpen="@CMAKE_INSTALL_PREFIX@/lib@LIB_SUFFIX@/libelektraintercept-fs.so"
 
 if [ ! -f "$interceptOpen" ]
 then
