--- a/src/bindings/CMakeLists.txt
+++ b/src/bindings/CMakeLists.txt
@@ -13,7 +13,6 @@ endif()
 set (regex "swig_.*")
 list_find (BINDINGS regex found)
 if (found)
-	message (STATUS "Include Binding swig")
 	find_swig ()
 	if (SWIG_FOUND)
 		add_subdirectory (swig)
@@ -35,7 +34,7 @@ if (FINDEX GREATER -1)
 	endif ()
 	list (FIND BINDINGS "gsettings" FINDEX)
 	if (FINDEX GREATER -1)
-		message (STATUS "Include Binding GSettings")
+		message (STATUS "Include Binding gsettings")
 		add_subdirectory (gsettings)
 	endif ()
 endif ()
