cmake: make sure LIBRARY_OUTPUT_DIRECTORY is created

--- a/src/bindings/intercept/fs/CMakeLists.txt
+++ b/src/bindings/intercept/fs/CMakeLists.txt
@@ -12,6 +12,7 @@ else ()
 	target_link_libraries (elektraintercept-fs elektra-kdb elektra-meta)
 	install (TARGETS elektraintercept-fs DESTINATION lib${LIB_SUFFIX})
 
+	mkdir (${CMAKE_LIBRARY_OUTPUT_DIRECTORY})
 	create_lib_symlink (
 			libelektraintercept-fs.so
 			libelektraintercept.so
