test: testtool_mergingkdb, fix BUILD_TESTING=OFF

--- a/src/libs/tools/tests/CMakeLists.txt
+++ b/src/libs/tools/tests/CMakeLists.txt
@@ -12,6 +12,6 @@ foreach (file ${TESTS})
 	add_gtest (${name} LINK_TOOLS)
 endforeach (file ${TESTS})
 
-if (ENABLE_TESTING)
+if (BUILD_TESTING AND ENABLE_TESTING)
 	set_property(TEST testtool_mergingkdb PROPERTY LABELS kdbtests)
 endif ()
