--- a/src/plugins/CMakeLists.txt
+++ b/src/plugins/CMakeLists.txt
@@ -72,11 +72,13 @@ endif()
 if (BUILD_SHARED)
 	mkdir (${CMAKE_LIBRARY_OUTPUT_DIRECTORY})
 	create_lib_symlink (
+			PLUGIN
 			libelektra-${KDB_DEFAULT_STORAGE}.so
 			libelektra-storage.so
 			)
 
 	create_lib_symlink (
+			PLUGIN
 			libelektra-${KDB_DEFAULT_RESOLVER}.so
 			libelektra-resolver.so
 			)
