--- a/src/tools/rest-frontend/resources/assets/js/config/constants.config.js.in
+++ b/src/tools/rest-frontend/resources/assets/js/config/constants.config.js.in
@@ -3,6 +3,7 @@
     'use strict';
 
     angular.module('elektra.rest.angular')
-        .constant('config', /* @echo CONFIGURATION */);
+        .constant('config', /* @echo CONFIGURATION */)
+		.constant('webStructure', /* @echo WEBSTRUCTURE */);
 
 })();
