--- a/src/tools/rest-frontend/package.json
+++ b/src/tools/rest-frontend/package.json
@@ -14,6 +14,7 @@
   "license": "BSD",
   "devDependencies": {
     "bower": "latest",
+    "fs-extra": "^0.30.0",
     "grunt": "latest",
     "grunt-cli": "latest",
     "grunt-contrib-cssmin": "latest",
