rest-frontend: translation for structure pages, plugin readme codeblock for infos, makePrettyName improvements, markdown tables renderer override

--- a/src/tools/rest-frontend/resources/structure.json.in
+++ b/src/tools/rest-frontend/resources/structure.json.in
@@ -46,6 +46,9 @@
 						"stop_regex": "####### UNUSED ######",
 						"section_regex": "## ([^#]+) ##",
 						"entry_regex": "\\- \\[(.+)\\]\\(([^\\)]+)\\)(.*)"
+					},
+					"name": {
+						"make_pretty": false
 					}
 				}
 			},
@@ -115,6 +118,9 @@
 					"target_file": ["README.md", "README", "readme.md", "readme"],
 					"parsing": {
 						"entry_regex": "^\\[(.+)\\]\\(([^\\)]+)\\)(.*)"
+					},
+					"name": {
+						"make_pretty": true
 					}
 				}
 			},
