base64: split up base64 files in plugin functions and encoding functions
base64.c contains only the plugin functions (get,set).
base64_functions.c contains the encoding and decoding functions, so that other plugins can include them easily.

--- a/src/plugins/base64/CMakeLists.txt
+++ b/src/plugins/base64/CMakeLists.txt
@@ -2,6 +2,8 @@ include (LibAddPlugin)
 
 add_plugin (base64
 	SOURCES
+		base64_functions.h
+		base64_functions.c
 		base64.h
 		base64.c
 	COMPILE_DEFINITIONS
