rest-frontend: use browserify to bundle application -> switch to nodejs syntax

--- a/src/tools/rest-frontend/package.json
+++ b/src/tools/rest-frontend/package.json
@@ -13,9 +13,11 @@
   "author": "Namoshek",
   "license": "BSD",
   "devDependencies": {
+    "angular": "^1.5.8",
     "bower": "latest",
     "fs-extra": "^0.30.0",
     "grunt": "latest",
+    "grunt-browserify": "^5.0.0",
     "grunt-cli": "latest",
     "grunt-contrib-cssmin": "latest",
     "grunt-contrib-jshint": "latest",
