rest-frontend: change of strategy - resolve all dependencies solely through npm, i.e. remove bower

--- a/src/tools/rest-frontend/CMakeLists.txt
+++ b/src/tools/rest-frontend/CMakeLists.txt
@@ -4,6 +4,6 @@ if (NPM_EXECUTABLE)
     set (install_directory ${TARGET_TOOL_EXEC_FOLDER}/${tool})
 
     install (DIRECTORY public resources DESTINATION ${install_directory})
-    install (FILES bower.json Gruntfile.js package.json .bowerrc DESTINATION ${install_directory})
+    install (FILES Gruntfile.js package.json application-config.json DESTINATION ${install_directory})
     install (CODE "execute_process (COMMAND npm install --unsafe-perm WORKING_DIRECTORY ${CMAKE_INSTALL_PREFIX}/${install_directory})")
 endif (NPM_EXECUTABLE)
