--- a/src/tools/rest-frontend/package.json
+++ b/src/tools/rest-frontend/package.json
@@ -13,12 +13,26 @@
   "author": "Namoshek",
   "license": "BSD",
   "devDependencies": {
+    "@iamadamjowett/angular-logger-max": "^1.2.3",
     "angular": "^1.5.8",
-    "bower": "latest",
+    "angular-animate": "^1.5.8",
+    "angular-breadcrumb": "^0.4.1",
+    "angular-clipboard": "^1.5.0",
+    "angular-file-saver": "^1.1.2",
+    "angular-marked": "^1.2.2",
+    "angular-messages": "^1.5.8",
+    "angular-sanitize": "^1.5.8",
+    "angular-translate": "^2.12.1",
+    "angular-translate-loader-static-files": "^2.12.1",
+    "angular-ui-bootstrap": "^2.2.0",
+    "angular-ui-notification": "^0.2.0",
+    "angular-ui-router": "^0.3.1",
+    "bootstrap": "^3.3.7",
     "fs-extra": "^0.30.0",
     "grunt": "latest",
     "grunt-browserify": "^5.0.0",
     "grunt-cli": "latest",
+    "grunt-concat": "^0.1.6",
     "grunt-contrib-cssmin": "latest",
     "grunt-contrib-jshint": "latest",
     "grunt-contrib-less": "latest",
@@ -26,10 +40,16 @@
     "grunt-contrib-watch": "latest",
     "grunt-http-server": "latest",
     "grunt-preprocess": "latest",
-    "jshint-stylish": "latest"
+    "highlight.js": "^9.7.0",
+    "jquery": "^2.2.4",
+    "jshint-stylish": "latest",
+    "ng-tags-input": "^3.1.1",
+    "pace-progress": "^1.0.2",
+    "satellizer": "^0.15.5",
+    "underscore": "^1.8.3"
   },
   "scripts": {
-    "postinstall": "./node_modules/bower/bin/bower --allow-root install && ./node_modules/grunt-cli/bin/grunt full"
+    "postinstall": "./node_modules/grunt-cli/bin/grunt full"
   },
   "config": {
     "unsafe-perm": true
