rest-frontend: make documentation links work

--- a/src/tools/rest-frontend/application-config.json
+++ b/src/tools/rest-frontend/application-config.json
@@ -9,7 +9,8 @@
 		"website": {
 			"root": "https://github.com/",
 			"paths": {
-				"issues": "ElektraInitiative/libelektra/issues/new"
+				"issues": "ElektraInitiative/libelektra/issues/new",
+				"doc_root": "ElektraInitiative/libelektra/tree/master/"
 			}
 		}
 	},
