--- a/src/tools/rest-frontend/application-config.json
+++ b/src/tools/rest-frontend/application-config.json
@@ -10,7 +10,8 @@
 			"root": "https://github.com/",
 			"paths": {
 				"issues": "ElektraInitiative/libelektra/issues/new",
-				"doc_root": "ElektraInitiative/libelektra/tree/master/"
+				"doc_root": "ElektraInitiative/libelektra/tree/master/",
+				"img_root": "ElektraInitiative/libelektra/raw/master/"
 			}
 		}
 	},
