--- a/debian/rules
+++ b/debian/rules
@@ -7,7 +7,7 @@
 binary/libelektra-bin binary/libelektra-dev:: binary/libelektra
 
 # Which plugins and tools should be built
-ELEKTRA_PLUGINS='ALL;-EXPERIMENTAL;-python;mozprefs;c;simplespeclang;base64'
+ELEKTRA_PLUGINS='ALL;-EXPERIMENTAL;-python;mozprefs;c;simplespeclang;base64;fcrypt'
 ELEKTRA_TOOLS='ALL'
 ELEKTRA_BINDINGS='cpp;swig_lua;swig_python2;intercept'
 
