fcrypt: fix compile error #1043

--- a/src/plugins/fcrypt/CMakeLists.txt
+++ b/src/plugins/fcrypt/CMakeLists.txt
@@ -2,6 +2,8 @@ include (LibAddPlugin)
 
 add_plugin (fcrypt
 	SOURCES
+		../base64/base64_functions.h
+		../base64/base64_functions.c
 		../crypto/helper.h
 		../crypto/helper.c
 		../crypto/gpg.h
@@ -10,8 +12,10 @@ add_plugin (fcrypt
 		fcrypt.c
 	INCLUDE_DIRECTORIES
 		${CMAKE_SOURCE_DIR}/src/plugins/crypto/
+		${CMAKE_SOURCE_DIR}/src/plugins/base64/
 	COMPILE_DEFINITIONS
 		ELEKTRA_PLUGIN_NAME=\"fcrypt\"
+		ELEKTRA_PLUGIN_NAME_C=fcrypt
 )
 
 if (ADDTESTING_PHASE)
