--- a/src/tools/rest-frontend/package.json
+++ b/src/tools/rest-frontend/package.json
@@ -28,18 +28,19 @@
     "angular-ui-notification": "^0.2.0",
     "angular-ui-router": "^0.3.1",
     "bootstrap": "^3.3.7",
+    "connect-modrewrite": "^0.9.0",
     "fs-extra": "^0.30.0",
     "grunt": "latest",
     "grunt-browserify": "^5.0.0",
     "grunt-cli": "latest",
     "grunt-concat": "^0.1.6",
     "grunt-contrib-concat": "^1.0.1",
+    "grunt-contrib-connect": "^1.0.2",
     "grunt-contrib-cssmin": "latest",
     "grunt-contrib-jshint": "latest",
     "grunt-contrib-less": "latest",
     "grunt-contrib-uglify": "latest",
     "grunt-contrib-watch": "latest",
-    "grunt-http-server": "latest",
     "grunt-preprocess": "latest",
     "highlight.js": "^9.7.0",
     "jquery": "^2.2.4",
