--- a/src/tools/rest-backend/tests/CMakeLists.txt
+++ b/src/tools/rest-backend/tests/CMakeLists.txt
@@ -16,4 +16,5 @@ foreach (file ${TESTS})
     add_gtest (${name} LINK_TOOLS NO_MAIN SOURCES $<TARGET_OBJECTS:tmp_${tool}>)
     target_link_elektra (${name} ${Boost_LIBRARIES})
     target_link_elektra (${name} ${CPPCMS_LIBRARY})
+    target_link_elektra (${name} ${LIBJWT_LIBRARY})
 endforeach (file ${TESTS})
