--- a/src/tools/rest-frontend/package.json
+++ b/src/tools/rest-frontend/package.json
@@ -48,7 +48,9 @@
     "ng-tags-input": "^3.1.1",
     "pace-progress": "^1.0.2",
     "satellizer": "^0.15.5",
-    "underscore": "^1.8.3"
+    "sync-request": "^3.0.1",
+    "underscore": "^1.8.3",
+    "xmlbuilder": "^8.2.2"
   },
   "scripts": {
     "postinstall": "./node_modules/grunt-cli/bin/grunt full"
