rest-backend: replace cryptlite library by openssl

--- a/src/tools/rest-backend/tests/CMakeLists.txt
+++ b/src/tools/rest-backend/tests/CMakeLists.txt
@@ -17,4 +17,5 @@ foreach (file ${TESTS})
     target_link_elektra (${name} ${Boost_LIBRARIES})
     target_link_elektra (${name} ${CPPCMS_LIBRARY})
     target_link_elektra (${name} ${LIBJWT_LIBRARY})
+    target_link_elektra (${name} ${OPENSSL_LIBRARIES})
 endforeach (file ${TESTS})
