rest-frontend: add news page and scripts that read, parse and copy news files

--- a/src/tools/rest-frontend/resources/assets/js/config/index.js.in
+++ b/src/tools/rest-frontend/resources/assets/js/config/index.js.in
@@ -5,6 +5,7 @@ var angular = require('angular');
 angular.module('elektra.rest.angular')
 	   .constant('config', /* @echo CONFIGURATION */)
 	   .constant('webStructure', /* @echo WEBSTRUCTURE */)
+	   .constant('news', /* @echo NEWS */)
 	   .config(require('./auth'))
 	   .config(require('./breadcrumbs'))
 	   .config(require('./http'))
