--- a/src/tools/rest-frontend/package.json
+++ b/src/tools/rest-frontend/package.json
@@ -49,6 +49,7 @@
     "ng-tags-input": "^3.1.1",
     "pace-progress": "^1.0.2",
     "satellizer": "^0.15.5",
+    "slugify": "^1.0.2",
     "sync-request": "^3.0.1",
     "underscore": "^1.8.3",
     "xmlbuilder": "^8.2.2"
