doc: improve statement about nodep
based on misunderstanding in #666

--- a/doc/CONTRACT.ini
+++ b/doc/CONTRACT.ini
@@ -289,7 +289,7 @@ type = vector<int enum>
   {"unittest",      1000}, ; substantial plugin unittests (testmod)
   {"shelltest",     1000}, ; substantial unittests with shell
   {"tested",         500}, ; extensively manually tested on every change
-  {"nodep",          250}, ; no external dependency, except the languages core deps, e.g. libstdc++
+  {"nodep",          250}, ; no external library dependencyi, except the languages core deps, e.g. libstdc++ and other plugins in `needs`
   {"libc",           250}, ; uses libc only, no deps of other language's runtimes, e.g., libstdc++
   {"configurable",    50}, ; options available to modify behaviour
   {"final",           50}, ; no further extensions, configure options or features are desirable
