rest-frontend: fix plugin section regex due to README changes

--- a/src/tools/rest-frontend/resources/structure.json.in
+++ b/src/tools/rest-frontend/resources/structure.json.in
@@ -44,7 +44,7 @@
 					"parsing": {
 						"start_regex": "# Plugins #",
 						"stop_regex": "####### UNUSED ######",
-						"section_regex": "## ([^#]+) ##",
+						"section_regex": "### ([^#]+) ###",
 						"entry_regex": "^\\- \\[(.+)\\]\\(([^\\)]+)\\)(.*)"
 					},
 					"name": {
